Install json-pointer; output the value referenced by the pointer

--- a/app/templates/linter.hbs
+++ b/app/templates/linter.hbs
@@ -1,5 +1,13 @@
 {{textarea value=jsonObject}}
 
+{{input value=jsonPointer}}
+
+<h2>JSON object</h2>
 <pre>
 {{formattedJsonObject}}
+</pre>
+
+<h2>Object referenced by pointer</h2>
+<pre>
+{{formattedJsonPointerValue}}
 </pre>
