Use more descriptive property names

--- a/app/templates/linter.hbs
+++ b/app/templates/linter.hbs
@@ -1,13 +1,13 @@
-{{textarea value=jsonObject}}
+{{textarea value=objectString}}
 
-{{input value=jsonPointer}}
+{{input value=pointer}}
 
 <h2>JSON object</h2>
 <pre>
-{{formattedJsonObject}}
+{{stringifiedObject}}
 </pre>
 
 <h2>Object referenced by pointer</h2>
 <pre>
-{{formattedJsonPointerValue}}
+{{stringifiedPointerObject}}
 </pre>
