Tweak styling/markup
@challeng

--- a/app/templates/linter.hbs
+++ b/app/templates/linter.hbs
@@ -4,10 +4,15 @@
 
 <h2>JSON object</h2>
 <pre>
+<code>
 {{stringifiedObject}}
+</code>
 </pre>
 
 <h2>Object referenced by pointer</h2>
+
 <pre>
+<code>
 {{stringifiedPointerObject}}
+</code>
 </pre>
