Highlight the section of the JSON that the pointer points to

--- a/app/styles/linter.sass
+++ b/app/styles/linter.sass
@@ -1,2 +1,9 @@
 .code-input
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace
+
+.json-pointer-highlight
+  color: #000
+
+.json-string
+  &.has-pointer-match
+    color: #bbb
