--- a/app/templates/linter.hbs
+++ b/app/templates/linter.hbs
@@ -1,14 +1,14 @@
 <section class="col-xs-6">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <button class="btn btn-default btn-xs pull-right" {{action "formatObjectString"}}>
+      <button class="btn btn-default btn-xs pull-right" {{action "formatJson"}}>
         Format
       </button>
       <h3 class="panel-title">JSON</h3>
     </div>
     <div class="panel-body">
       <div class="form-group">
-          {{textarea value=objectString
+          {{textarea value=json
                      class="form-control code-input"
                      id="object"
                      rows="10"
@@ -32,7 +32,7 @@
       <h3 class="panel-title">Output</h3>
     </div>
     <div class="panel-body">
-      <pre><code {{bind-attr class=":json-string hasPointerMatch"}}>{{#if objectString}}{{json-stringifier-highlighter stringifiedObject}}{{else}}Please enter a JSON object.{{/if}}</code></pre>
+      <pre><code {{bind-attr class=":json-string hasPointerMatch"}}>{{#if json}}{{json-stringifier-highlighter stringifiedObject}}{{else}}Please enter a JSON object.{{/if}}</code></pre>
     </div>
   </div>
 </section>
