--- a/app/styles/linter.sass
+++ b/app/styles/linter.sass
@@ -1,5 +1,6 @@
 .code-input
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace
+  resize: none
 
 .json-pointer-highlight
   color: #000
