--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,6 +3,9 @@
     <header class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         {{#link-to "linter" class="navbar-brand"}}JSON Pointer Linter{{/link-to}}
+        <a href="https://github.com/jessepinho/jsonpointer.com" class="github-link pull-right" target="_blank">
+          <img src="assets/github.svg" alt="GitHub logo" />
+        </a>
       </div>
     </header>
   </div>
