Make 'Pointer' an actual HTML label

--- a/app/templates/linter.hbs
+++ b/app/templates/linter.hbs
@@ -10,7 +10,7 @@
 
   <div class="form-group">
     <div class="input-group">
-      <span class="input-group-addon">Pointer</span>
+      <label for="pointer" class="input-group-addon">Pointer</label>
       {{input value=pointer
               class="form-control code-input"
               id="pointer"
