Add JessePinho.com link

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -3,9 +3,10 @@
 body
   padding-top: 70px
 
-.github-link
-  margin-top: 10px
+.nav-link
+  margin:
+    left: 10px
+    top: 10px
 
   img
     height: 30px
-    width: 30px
