--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,9 +2,12 @@
   <div class="row">
     <header class="navbar navbar-default navbar-fixed-top">
       <div class="container">
-        {{#link-to "linter" class="navbar-brand"}}JSON Pointer Linter{{/link-to}}
-        <a href="https://github.com/jessepinho/jsonpointer.com" class="github-link pull-right" target="_blank">
+        <span class="navbar-brand">JSON Pointer Linter</span>
+        <a href="https://github.com/jessepinho/jsonpointer.com" class="nav-link pull-right" target="_blank">
           <img src="assets/github.svg" alt="GitHub logo" />
+        </a>
+        <a href="http://www.jessepinho.com" class="nav-link pull-right" target="_blank">
+          <img src="assets/jesse-pinho.svg" alt="JessePinho.com" />
         </a>
       </div>
     </header>
