Tweak logo sizes/positioning

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -5,8 +5,11 @@ body
 
 .nav-link
   margin:
-    left: 10px
-    top: 10px
+    left: 30px
+    top: 5px
 
   img
-    height: 30px
+    height: 40px
+
+.nav-link-jesse-pinho img
+  height: 45px
