--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,10 +3,10 @@
     <header class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <span class="navbar-brand">JSON Pointer Linter</span>
-        <a href="https://github.com/jessepinho/jsonpointer.com" class="nav-link pull-right" target="_blank">
+        <a href="https://github.com/jessepinho/jsonpointer.com" class="nav-link nav-link-github pull-right" target="_blank">
           <img src="assets/github.svg" alt="GitHub logo" />
         </a>
-        <a href="http://www.jessepinho.com" class="nav-link pull-right" target="_blank">
+        <a href="http://www.jessepinho.com" class="nav-link nav-link-jesse-pinho pull-right" target="_blank">
           <img src="assets/jesse-pinho.svg" alt="JessePinho.com" />
         </a>
       </div>
