--- a/app/templates/linter.hbs
+++ b/app/templates/linter.hbs
@@ -4,23 +4,28 @@
                  class="form-control code-input"
                  id="object"
                  rows="10"
-                 placeholder=objectPlaceholder}}
+                 placeholder=chosenPlaceholder.json}}
   </div>
 
 
-  <div class="form-group">
-    <div class="input-group">
+  <div class="form-inline">
+    <div class="input-group input-group-sm">
       <label for="pointer" class="input-group-addon">Pointer</label>
       {{input value=pointer
               class="form-control code-input"
               id="pointer"
-              placeholder=pointerPlaceholder}}
-      <span class="input-group-btn">
-        <button class="btn btn-default" {{action "formatJson"}}>
-          <span class="glyphicon glyphicon-align-left"></span>
-          Format JSON
-        </button>
-      </span>
+              placeholder=chosenPlaceholder.pointer}}
+    </div>
+
+    <div class="btn-group btn-group-sm pull-right">
+      <button class="btn btn-default" {{action "formatJson"}}>
+        <span class="glyphicon glyphicon-align-left"></span>
+        Format JSON
+      </button>
+      <button class="btn btn-default" {{action "randomizeData"}}>
+        <span class="glyphicon glyphicon-random"></span>
+        Randomize data
+      </button>
     </div>
   </div>
 </section>
