Disable the 'Format JSON' button when it doesn't apply

--- a/app/templates/linter.hbs
+++ b/app/templates/linter.hbs
@@ -18,7 +18,7 @@
     </div>
 
     <div class="btn-group btn-group-sm pull-right">
-      <button class="btn btn-default" {{action "formatJson"}}>
+      <button class="btn btn-default" {{action "formatJson"}} {{bindAttr disabled="disableFormatJsonButton"}}>
         <span class="glyphicon glyphicon-align-left"></span>
         Format JSON
       </button>
