--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,7 @@
         {{#link-to "linter"
                    (query-params json="" pointer="")
                    class="navbar-brand"}}
-          JSON Pointer Linter
+          JSON Pointer Tester
         {{/link-to}}
 
         <a href="https://github.com/jessepinho/jsonpointer.com"
