--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,3 +1,7 @@
+@import '_color-definitions'
+$color-primary: $palette-blue-500
+$color-accent: $palette-red-500
+@import 'material-design-lite'
 @import 'linter'
 
 body
