--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -4,16 +4,10 @@ $color-accent: $palette-red-500
 @import 'material-design-lite'
 @import 'linter'
 
-body
-  padding-top: 70px
+.mdl-layout-title
+  color: #fff
+  text-decoration: none
 
-.nav-link
-  margin:
-    left: 30px
-    top: 5px
-
+.mdl-navigation__link
   img
     height: 40px
-
-.nav-link-jesse-pinho img
-  height: 45px
