--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,30 +1,30 @@
-<div class="container">
-  <div class="row">
-    <header class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        {{#link-to "linter"
-                   (query-params json="" pointer="")
-                   class="navbar-brand"}}
-          JSON Pointer Tester
-        {{/link-to}}
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      {{#link-to "linter"
+                 (query-params json="" pointer="")
+                 class="mdl-layout-title"}}
+        JSON Pointer Tester
+      {{/link-to}}
 
+      <div class="mdl-layout-spacer"></div>
+      <nav class="mdl-navigation">
         <a href="https://github.com/jessepinho/jsonpointer.com"
-           class="nav-link nav-link-github pull-right"
+           class="mdl-navigation__link nav-link-github"
            target="_blank">
           <img src="assets/github.svg" alt="GitHub logo" />
         </a>
 
         <a href="http://www.jessepinho.com"
-           class="nav-link nav-link-jesse-pinho pull-right"
+           class="mdl-navigation__link nav-link-jesse-pinho"
            target="_blank">
           <img src="assets/jesse-pinho.svg" alt="JessePinho.com" />
         </a>
-      </div>
-    </header>
-  </div>
-  <div class="row">
-    <main>
-      {{outlet}}
-    </main>
-  </div>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    {{outlet}}
+  </main>
 </div>
