Use MDL form elements; remove placeholdders (for now)

--- a/app/styles/linter.sass
+++ b/app/styles/linter.sass
@@ -1,6 +1,5 @@
 .code-input
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace
-  resize: none
 
 .json-pointer-highlight
   color: #000
@@ -8,3 +7,9 @@
 .json-string
   &.has-pointer-match
     color: #bbb
+
+.object, .pointer
+  width: 100%
+
+textarea.code-input
+  resize: vertical
