--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -24,7 +24,9 @@
     </div>
   </header>
 
-  <main>
-    {{outlet}}
+  <main class="mdl-layout__content">
+    <div class="page-content">
+      {{outlet}}
+    </div>
   </main>
 </div>
