Use cards for displaying input/output

--- a/app/styles/linter.sass
+++ b/app/styles/linter.sass
@@ -4,12 +4,12 @@
 .json-pointer-highlight
   color: #000
 
+.input, .object, .output, .pointer
+  width: 100%
+
 .json-string
   &.has-pointer-match
     color: #bbb
-
-.object, .pointer
-  width: 100%
 
 textarea.code-input
   resize: vertical
