--- a/app/templates/linter.hbs
+++ b/app/templates/linter.hbs
@@ -1,31 +1,46 @@
 <section class="mdl-grid">
   <div class="mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet">
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label object">
-      <label for="object" class="mdl-textfield__label">JSON object</label>
-      {{textarea value=json
-                 class="mdl-textfield__input code-input"
-                 id="object"
-                 rows="10"}}
-    </div>
+    <div class="mdl-card mdl-shadow--2dp input">
+      <div class="mdl-card__title">
+        <h2 class="mdl-card__title-text">Input</h2>
+      </div>
+      <div class="mdl-card__supporting-text">
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label object">
+          <label for="object" class="mdl-textfield__label">JSON object</label>
+          {{textarea value=json
+                     class="mdl-textfield__input code-input"
+                     id="object"
+                     rows="10"}}
+        </div>
 
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label pointer">
-      <label for="pointer" class="mdl-textfield__label">Pointer</label>
-      {{input value=pointer
-              class="mdl-textfield__input code-input"
-              id="pointer"}}
-    </div>
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label pointer">
+          <label for="pointer" class="mdl-textfield__label">Pointer</label>
+          {{input value=pointer
+                  class="mdl-textfield__input code-input"
+                  id="pointer"}}
+        </div>
+      </div>
 
-    <div class="btn-group btn-group-sm pull-right">
-      <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" {{action "formatJson"}} {{bindAttr disabled="disableFormatJsonButton"}}>
-        <i class="material-icons">format_align_left</i>
-      </button>
-      <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" {{action "randomizeData"}}>
-        <i class="material-icons">shuffle</i>
-      </button>
+      <div class="mdl-card__actions mdl-card--border">
+        <button class="mdl-button mdl-js-button mdl-js-ripple-effect" {{action "formatJson"}} {{bindAttr disabled="disableFormatJsonButton"}}>
+          Format JSON
+        </button>
+
+        <button class="mdl-button mdl-js-button mdl-js-ripple-effect" {{action "randomizeData"}}>
+          Randomize data
+        </button>
+      </div>
     </div>
   </div>
 
   <div class="mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet">
-    <pre><code {{bind-attr class=":json-string hasPointerMatch"}}>{{#if json}}{{json-stringifier-highlighter stringifiedObject}}{{else}}Please enter a JSON object.{{/if}}</code></pre>
+    <div class="mdl-card mdl-shadow--2dp output">
+      <div class="mdl-card__title">
+        <h2 class="mdl-card__title-text">Output</h2>
+      </div>
+      <div class="mdl-card__supporting-text">
+        <pre><code {{bind-attr class=":json-string hasPointerMatch"}}>{{#if json}}{{json-stringifier-highlighter stringifiedObject}}{{else}}Please enter a JSON object.{{/if}}</code></pre>
+      </div>
+    </div>
   </div>
 </section>
