Simplify layout; remove site/GitHub links (for now)

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -4,10 +4,5 @@ $color-accent: $palette-red-500
 @import 'material-design-lite'
 @import 'linter'
 
-.mdl-layout-title
-  color: #fff
-  text-decoration: none
-
-.mdl-navigation__link
-  img
-    height: 40px
+body
+  background: #f8f8f8
