--- a/app/styles/linter.sass
+++ b/app/styles/linter.sass
@@ -1,5 +1,7 @@
-.code-input
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace
+code, .code-input
+  font:
+    family: Menlo, Monaco, Consolas, "Courier New", monospace
+    size: $input-text-font-size
 
 .json-pointer-highlight
   color: #000
