--- a/app/templates/linter.hbs
+++ b/app/templates/linter.hbs
@@ -4,11 +4,27 @@
       <div class="mdl-card__title">
         <h1 class="mdl-card__title-text">
           {{#link-to "linter"
-                     (query-params json="" pointer="")
-                     class="mdl-layout-title"}}
+                     (query-params json="" pointer="")}}
             JSON Pointer Tester
           {{/link-to}}
         </h1>
+        <div class="mdl-layout-spacer"></div>
+        <div class="mdl-navigation">
+          <button
+            class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"
+            alt="Format JSON"
+            disabled={{disableFormatJsonButton}}
+            {{action "formatJson"}}>
+            <i class="material-icons">format_align_left</i>
+          </button>
+
+          <button
+            class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"
+            alt="Randomize data"
+            {{action "randomizeData"}}>
+            <i class="material-icons">shuffle</i>
+          </button>
+        </div>
       </div>
 
       <div class="mdl-card__supporting-text">
@@ -26,16 +42,6 @@
                   class="mdl-textfield__input code-input"
                   id="pointer"}}
         </div>
-      </div>
-
-      <div class="mdl-card__actions mdl-card--border">
-        <button class="mdl-button mdl-js-button mdl-js-ripple-effect" {{action "formatJson"}} {{bindAttr disabled="disableFormatJsonButton"}}>
-          Format JSON
-        </button>
-
-        <button class="mdl-button mdl-js-button mdl-js-ripple-effect" {{action "randomizeData"}}>
-          Randomize data
-        </button>
       </div>
     </div>
   </div>
