Put page title and JSON input into separate cards

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,6 +1,6 @@
 @import '_color-definitions'
-$color-primary: $palette-blue-400
-$color-accent: $palette-red-500
+$color-primary: $palette-blue-grey-400
+$color-accent: $palette-orange-500
 @import 'material-design-lite'
 @import 'linter'
 
