--- a/app/styles/linter.sass
+++ b/app/styles/linter.sass
@@ -3,11 +3,11 @@ code, .code-input
     family: Menlo, Monaco, Consolas, "Courier New", monospace
     size: $input-text-font-size
 
+.full-width
+  width: 100%
+
 .json-pointer-highlight
   color: #000
-
-.input, .object, .output, .pointer
-  width: 100%
 
 .json-string
   &.has-pointer-match
@@ -15,3 +15,9 @@ code, .code-input
 
 textarea.code-input
   resize: vertical
+
+.title
+  min-height: auto
+
+  a
+    text-decoration: none
