--- a/app/templates/linter.hbs
+++ b/app/templates/linter.hbs
@@ -1,46 +1,60 @@
 <section class="mdl-grid">
   <div class="mdl-cell mdl-cell--3-col mdl-cell--3-col-tablet">
-    <div class="mdl-card mdl-shadow--2dp input">
-      <div class="mdl-card__title">
-        <h1 class="mdl-card__title-text">
-          {{#link-to "linter"
-                     (query-params json="" pointer="")}}
-            JSON Pointer Tester
-          {{/link-to}}
-        </h1>
-        <div class="mdl-layout-spacer"></div>
-        <div class="mdl-navigation">
-          <button
-            class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"
-            alt="Format JSON"
-            disabled={{disableFormatJsonButton}}
-            {{action "formatJson"}}>
-            <i class="material-icons">format_align_left</i>
-          </button>
-
-          <button
-            class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"
-            alt="Randomize data"
-            {{action "randomizeData"}}>
-            <i class="material-icons">shuffle</i>
-          </button>
+    <div class="mdl-grid">
+      <div class="mdl-card mdl-shadow--2dp full-width title">
+        <div class="mdl-card__title">
+          <h1 class="mdl-card__title-text">
+            {{#link-to "linter"
+                       (query-params json="" pointer="")}}
+              JSON Pointer Tester
+            {{/link-to}}
+          </h1>
         </div>
       </div>
+    </div>
 
-      <div class="mdl-card__supporting-text">
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label object">
-          <label for="object" class="mdl-textfield__label">JSON object</label>
-          {{textarea value=json
-                     class="mdl-textfield__input code-input"
-                     id="object"
-                     rows="10"}}
+    <div class="mdl-grid">
+      <div class="mdl-card mdl-shadow--2dp full-width">
+        <div class="mdl-card__supporting-text">
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label full-width">
+            <label for="object" class="mdl-textfield__label">JSON object</label>
+            {{textarea value=json
+                       class="mdl-textfield__input code-input"
+                       id="object"
+                       rows="10"}}
+          </div>
+
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label full-width">
+            <label for="pointer" class="mdl-textfield__label">Pointer</label>
+            {{input value=pointer
+                    class="mdl-textfield__input code-input"
+                    id="pointer"}}
+          </div>
         </div>
+        <div class="mdl-card__actions">
+          <nav class="mdl-navigation">
+            <div class="mdl-layout-spacer"></div>
+            <button
+              class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"
+              alt="Format JSON"
+              disabled={{disableFormatJsonButton}}
+              {{action "formatJson"}}>
+              <i class="material-icons">format_align_left</i>
+            </button>
 
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label pointer">
-          <label for="pointer" class="mdl-textfield__label">Pointer</label>
-          {{input value=pointer
-                  class="mdl-textfield__input code-input"
-                  id="pointer"}}
+            <button
+              class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"
+              alt="Randomize data"
+              {{action "randomizeData"}}>
+              <i class="material-icons">shuffle</i>
+            </button>
+
+            {{#link-to "linter"
+                       (query-params json="" pointer="")
+                       class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"}}
+               <i class="material-icons">clear</i>
+            {{/link-to}}
+          </nav>
         </div>
       </div>
     </div>
