Change color scheme

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -5,4 +5,4 @@ $color-accent: $palette-orange-500
 @import 'linter'
 
 body
-  background: #f8f8f8
+  background: unquote("rgb(#{$palette-blue-grey-500})")
