Only highlight pointer matches

--- a/app/templates/linter.hbs
+++ b/app/templates/linter.hbs
@@ -77,6 +77,6 @@
   </div>
 
   <div class="mdl-cell mdl-cell--9-col mdl-cell--9-col-tablet">
-    <pre><code {{bind-attr class=":json-string hasPointerMatch"}}>{{#if json}}{{json-stringifier-highlighter stringifiedObject}}{{else}}Please enter a JSON object.{{/if}}</code></pre>
+    <pre><code {{bind-attr class=":json-string"}}>{{#if json}}{{json-stringifier-highlighter stringifiedObject}}{{else}}Please enter a JSON object and pointer.{{/if}}</code></pre>
   </div>
 </section>
